Bug 322074 - Zoom: Does not respect Crisp scaling mode with XRender
Summary: Zoom: Does not respect Crisp scaling mode with XRender
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/111...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-07 17:21 UTC by Christoph Feck
Modified: 2013-07-08 17:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2013-07-07 17:21:41 UTC
When using XRender and setting the Scale method to "Crisp", the Zoom effect still does a smooth scaling. I often actually like to "see pixels" (that's why I zoom in).

This works in OpenGL mode.

Maybe it would be possible to not use the global scale method, but allow configuring "Smooth vs. Crisp" for the Zoom effect separately.
Comment 1 Thomas Lübking 2013-07-07 18:15:15 UTC
Nothing does.
Comment 2 Thomas Lübking 2013-07-08 17:15:31 UTC
Git commit 96b0435b7fb9bdf250f0284cea961cd8d3bbf00b by Thomas Lübking.
Committed on 07/07/2013 at 18:09.
Pushed by luebking into branch 'master'.

use configured xrender filter

that's why it's configured

REVIEW: 111428
FIXED-IN: 4.11

M  +1    -1    kwin/scene_xrender.cpp

http://commits.kde.org/kde-workspace/96b0435b7fb9bdf250f0284cea961cd8d3bbf00b