use configured xrender filter

that's why it's configured

REVIEW: 111428
BUG: 322074
FIXED-IN: 4.11